--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -58,5 +58,5 @@ logging:
     org.hibernate.orm.jdbc.extract: TRACE
 custom:
   image:
-    upload-dir:
+    upload-dir: THIS_DIRECTORY_MAYBE_NOT_SAFE
 
